--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -55,7 +55,7 @@ h1 {
   }
 
   h1 {
-    font-size: var(--font-size-xl);
+    font-size: var(--fs-xxl);
     line-height: 1.1;
   }
 
@@ -72,8 +72,4 @@ h1 {
   .content {
   margin-top: 0rem;
 }
-
-  h1 {
-    font-size: var(--font-size-lg);
-  }
 }
