--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -15,7 +15,7 @@
 
 .productImg {
   width: 100%;
-  height: 17.75rem;
+  height: 15.875rem;
   opacity: 1;
 
   border-bottom: 1px solid var(--color-border-light);
@@ -44,18 +44,20 @@
 }
 
 .cardButton {
-  width: 17.75rem;
   position: absolute;
   bottom: 1rem;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%, 10px); /* чуть ниже изначально */
+  width: calc(100% - 2rem);
   opacity: 0;
   pointer-events: none;
-  transition: opacity 0.2s ease;
+  transition: opacity .25s ease, transform .25s ease;
 }
+
 
 .card:hover .cardButton {
   opacity: 1;
+  transform: translate(-50%, 0); /* поднимается чуть вверх */
   pointer-events: auto;
 }
 
@@ -66,15 +68,18 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
+  font-size: var(--fs-md);
+  font-weight: 500;
+  color: var(--color-text);
 }
 .price {
-  font-size: var(--font-size-lg);
+  font-size: var(--fs-xl);
   font-weight: 600;
   color: var(--color-text);
   padding-right: 1rem;
 }
 .old {
-  font-size: var(--font-size-md);
+  font-size: var(--fs-md);
   color: var(--color-secondary);
   text-decoration: line-through;
   font-weight: 500;
@@ -111,6 +116,5 @@
 }
 
 .info {
-  margin: 0;
-  text-align: center;
+  padding: 0 32px;
 }
