--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,6 +4,7 @@
   position: sticky;
   top: 0;
   z-index: 1000;
+  padding: 0 2.5rem;
 }
 
 
@@ -37,7 +38,7 @@
 
 .link {
   font-weight: 500;
-  font-size: var(--font-size-md);
+  font-size: var(--fs-md);
   color: var(--color-text);
   transition: var(--transition);
   font-family: var(--font-main);
@@ -149,6 +150,7 @@
     flex-direction: column;
     gap: 1.375rem; 
     margin-top: 2.5rem;
+    font-size: var(--fs-md);
   }
 
   .cartMobile {
