--- a/src/components/SubscribeBlock/SubscribeBlock.module.css
+++ b/src/components/SubscribeBlock/SubscribeBlock.module.css
@@ -1,17 +1,19 @@
 .section {
   background: var(--color-primary);
   border-radius: var(--radius-lg);
-  padding: 2rem 0 0;
+  padding: 0 2.5rem;
 }
 
 .container {
   max-width: var(--container);
-  margin: 2rem 2rem 0 2rem;
+  margin: 0 auto;
 }
  
 .title {
   text-align: center;
-  margin-bottom: 2rem; 
+  margin-bottom: 2rem;
+  color:  #fff; 
+  font-size: var(--fs-xxl);
 }
 
 .content {
@@ -19,7 +21,7 @@
   align-items: flex-end;
   gap: 2rem; 
   padding: 0; 
-  margin-right: 2rem;
+
 }
 
 .image {
