--- a/src/components/SubscribeBlock/SubscribeForm/SubscribeForm.module.css
+++ b/src/components/SubscribeBlock/SubscribeForm/SubscribeForm.module.css
@@ -33,6 +33,11 @@
   font-size: 1.2rem;
 }
 
+.message h3,
+.message p {
+  color: #fff;
+}
+
 @media (max-width: 768px) {
   .form {
     max-width: 100%;
