--- a/src/components/FilterBar/FilterBar.module.css
+++ b/src/components/FilterBar/FilterBar.module.css
@@ -1,49 +1,44 @@
 .filterBar {
-  max-width: 908px;
-  margin-bottom: 40px;
-
+  margin-bottom: var(--space-lg);
+  gap: var(--space-md);
   display: flex;
   flex-wrap: nowrap;
-  gap: 40px;
-  align-items: center;
-  
+  align-items: stretch;
 }
-
 
 .filterBlock {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 16px;
-
+  gap: var(--space-sm);
   flex-shrink: 0;
 }
 
 .label {
-  font-size: 16px;
+  font-size: var(--fs-md);
   font-weight: 600;
   color: var(--color-text);
   white-space: nowrap;
 }
 
-/* Price */
-
 .priceInputs {
   display: flex;
   align-items: center;
-  gap: 12px;
+  gap: var(--space-sm);
 }
 
 .priceInputs input {
-  width: 112px;
-  height: 36px;
-  padding: 0 12px;
+  flex: 1;
+  min-width: 0;
+ max-width: 7rem;
+  height: 2.25rem; /* логичная высота */
+  padding: 0 var(--space-sm);
 
   border: 1px solid var(--color-border-light);
   border-radius: var(--radius-sm);
 
   font-family: var(--font-main);
-  font-size: 16px;
+  font-size: var(--fs-md);
   transition: var(--transition);
 }
 
@@ -52,30 +47,30 @@
   outline: none;
 }
 
-/* Sort */
 
 .sortWrapper {
   position: relative;
-  width: 200px;
+  width: 12.5rem; 
 }
 
 .sortButton {
   width: 100%;
-  height: 36px;
-  padding: 0 12px;
-  padding-right: 8px;
+  height: 2.25rem;
+  padding: 0 var(--space-sm);
+  padding-right: 0.5rem;
 
   display: flex;
   justify-content: space-between;
   align-items: center;
-  
-  background: #fff;
+
+  background: var(--color-bg);
   border: 1px solid var(--color-border-light);
   border-radius: var(--radius-sm);
-  
-  font-size: 16px;
+
+  font-size: var(--fs-md);
   font-family: var(--font-main);
   color: var(--color-text);
+
   cursor: url("/src/assets/icons/hand.svg") 4 4, pointer;
   transition: var(--transition);
 }
@@ -84,9 +79,10 @@
   border-color: var(--color-primary);
 }
 
+
 .arrow {
-  width: 14px;
-  height: 14px;
+  width: 0.875rem;
+  height: 0.875rem;
   transition: transform .2s ease;
 }
 
@@ -94,32 +90,24 @@
   transform: rotate(180deg);
 }
 
-.sortButton:hover .arrow,
-.arrow.open:hover {
-  transform: scale(1.1) rotate(180deg);
-}
-
-/* Dropdown menu */
 .dropdown {
   position: absolute;
   left: 0;
-
   width: 100%;
-  background: #fff;
+  background: var(--color-bg);
   color: var(--color-secondary);
-
   border-radius: var(--radius-sm);
   overflow: hidden;
   z-index: 20;
 
-  list-style: none;   
-  padding: 0;         
+  padding: 0;
   margin: 0;
+  list-style: none;
 }
 
 .option {
-  padding: 8px 12px;
-  font-size: 16px;
+  padding: var(--space-xs) var(--space-sm);
+  font-size: var(--fs-md);
   cursor: url("/src/assets/icons/hand.svg") 4 4, pointer;
   transition: var(--transition);
 }
@@ -133,10 +121,10 @@
 }
 
 /* Mobile */
-@media (max-width: 768px) {
+@media (max-width: 61.6rem) { 
   .filterBar {
     flex-wrap: wrap;
-    gap: 24px;
+    gap: var(--space-md);
   }
 
   .sortWrapper,
