--- a/src/pages/CartPage/CartPage.module.css
+++ b/src/pages/CartPage/CartPage.module.css
@@ -2,15 +2,21 @@
   width: 100%;
   max-width: var(--container);
   margin: 0 auto;
-  padding: 0; 
+  padding: 0;
+}
+
+.divider {
+  width: 100%;
+  height: 1px;
+  background: var(--color-border-light);
+  margin: 2rem 0;
 }
 
 .cartGrid {
   display: grid;
-  grid-template-columns: 1fr auto;
-  align-items: flex-start;
-  gap: 3rem; 
-  margin-top: 2rem;
+  grid-template-columns: 1fr 34rem;
+  gap: 3rem;
+  margin-top: 1rem;
 }
 
 .left {
@@ -23,7 +29,6 @@
   display: flex;
   justify-content: flex-end;
 }
-
 
 @media (max-width: 992px) {
   .cartGrid {
