--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -16,7 +16,7 @@
   position: relative;
 }
 
-/* Links remove underline */
+/* Links */
 .link,
 .logo,
 .cart {
@@ -78,12 +78,11 @@
   display: none;
 }
 
-/* ===== MOBILE ===== */
+/*  MOBILE */
 .mobileMenu {
   display: none;
 }
 
-/* Mobile */
 @media (max-width: 768px) {
 
   .navDesktop,
@@ -109,7 +108,7 @@
     justify-content: center;
   }
 
-  /* Mobile fullscreen menu */
+  /* fullscreen menu */
   
   .mobileMenu {
     display: flex;
