--- a/src/components/SectionHeader/SectionHeader.module.css
+++ b/src/components/SectionHeader/SectionHeader.module.css
@@ -33,9 +33,11 @@
   background: var(--color-primary);
 }
 
-@media (max-width: 800px) { 
+@media (max-width: 770px) { 
   .wrap {
-    margin: 3rem 0 2rem; 
+    display: flex;
+    flex-direction: column;
+    margin: 2rem 0; 
   }
 }
 
