--- a/src/components/SubscribeBlock/SubscribeBlock.module.css
+++ b/src/components/SubscribeBlock/SubscribeBlock.module.css
@@ -32,16 +32,14 @@
 
 .formWrap {
   flex: 1;
-  max-width: 32rem;
   padding-bottom: 2rem;
 }
 
 @media (max-width: 1200px) {
   .content {
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
     gap: 1.5rem;
-    padding: 0 1rem 1.5rem;
   }
 
   .formWrap {
@@ -49,7 +47,20 @@
   }
 
   .image {
+    width: 90%;
+    min-height: 10rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .content {
+    flex-direction: column;
+    justify-content: center;
+    gap: 1.5rem;
+  }
+  .image {
     width: 100%;
     min-height: 10rem;
   }
+
 }
