--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -27,6 +27,7 @@
 
 .btn-primary:hover {
   background: var(--color-text);
+  color: var(--color-bg);
 }
 .btn-primary:active {
   transform: scale(.97);
