--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -40,6 +40,10 @@ html, body {
   margin: 0;
   padding: 0;
 }
+.logo {
+  text-decoration: none !important;
+  color: inherit !important;
+}
 
 /* Typography */
 .title {
