--- a/src/pages/CartPage/CartPage.module.css
+++ b/src/pages/CartPage/CartPage.module.css
@@ -5,12 +5,6 @@
   padding: 0;
 }
 
-.divider {
-  width: 100%;
-  height: 1px;
-  background: var(--color-border-light);
-  margin: 2rem 0;
-}
 
 .cartGrid {
   display: grid;
@@ -39,4 +33,10 @@
   .right {
     justify-content: center;
   }
+}
+@media (max-width: 600px) {
+  .cartGrid {
+    gap: 1.5rem;
+  }
+
 }
